angular added and scripts

--- a/Battleships.Web/Battleships.Web.csproj
+++ b/Battleships.Web/Battleships.Web.csproj
@@ -13,4 +13,12 @@
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Battleships.Engine\Battleships.Engine.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="wwwroot\app\components\battleship\battleship.component.js">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
