--- a/Battleships.Web/Battleships.Web.csproj
+++ b/Battleships.Web/Battleships.Web.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\Battleships.Engine\Battleships.Engine.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Content Update="wwwroot\app\components\battleship\battleshipComponent.js">
+    <Content Update="wwwroot\app\components\battleship\battleship.component.js">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
